[project]
name = "dev-env"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "duckdb>=1.3.2",
    "ipykernel>=6.30.1",
    "magic-duckdb>=0.1.32",
    "motherduck>=0.0.0",
    "notebook>=7.4.5",
    "pandas>=2.3.1",
]
